--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,21 +5,24 @@
 }
 
 body {
-	/*background-color: #1aff1a;*/
+	background-color: #1aff1a;
 }
 
 .container {
-	margin: 0px 200px 0px 200px;
-	height: 100%;
-	/*background-color: #FFFFFF;*/
+	margin: 10px auto 0px auto;
+	width: 966px;
+	background-color: #FFFFFF;
 }
 
+/*TOP-SECTION*/
 .top-section {
-	height: 100px;
+	height: 105px;
 }
 
 .company {
 	overflow: hidden;
+	height: 76px;
+	background-color: #1aff1a;
 }
 
 .company img {
@@ -32,9 +35,10 @@ body {
 }
 
 .slogan {
-	margin-left: 50px;
+	margin-left: 35px;
 	height: 66px;
 	float: left;
+	font-family: 'Ubuntu', sans-serif;
 }
 
 .slogan h1 {
@@ -44,13 +48,26 @@ body {
 }
 
 .nav li {
-	display: inline;
+	display: block;
+	text-align: center;
+	float: left;
 	font-size: 25px;
-	border: 1px solid #000000;
-	margin: 0px ;
+	border-right: 1px solid white;
+	background-color: #01a6e8;
+	width: 192.4px;
+	font-family: 'Karla', sans-serif;
+}
+
+.nav li:nth-child(5) {
+	border-right: none;
 }
 
 .nav li a {
 	text-decoration: none;
-	color: black;
+	color: #FFFFFF;
+}
+
+/*MAIN-SECTION*/
+.main-section {
+
 }
