--- a/styleshop.css
+++ b/styleshop.css
@@ -40,6 +40,11 @@
 	border-bottom: none;
 }
 
+.categories a {
+	text-decoration: none;
+	color: black;
+}
+
 .products {
 	text-align: center;
 	float: left;
