--- a/style-home.css
+++ b/style-home.css
@@ -8,7 +8,7 @@
 }
 
 .review h2 {
-	display:inline;
+	padding:10px 0px;
 }
 
 .social {
@@ -18,4 +18,8 @@
 .social img {
 	margin-right: 20px;
 	margin-top: 2px;
+}
+
+.slideshow img {
+	display:block;
 }
