--- a/style-home.css
+++ b/style-home.css
@@ -13,11 +13,13 @@
 
 .social {
 	text-align: center;
+	margin-top:20px;
 }
 
 .social img {
-	margin-right: 20px;
-	margin-top: 2px;
+	margin-right: 15px;
+	margin-left:12px;
+	margin-top: 15px;
 }
 
 .slideshow img {
