--- a/stylesheet.css
+++ b/stylesheet.css
@@ -151,3 +151,26 @@ body {
 	background-color: #d3d3d3;
 	border-radius: 10px;
 }
+
+.review {
+	text-align:center;
+}
+
+.review h2 {
+	padding:10px 0px;
+}
+
+.social {
+	text-align: center;
+	margin-top:20px;
+}
+
+.social img {
+	margin-right: 15px;
+	margin-left:12px;
+	margin-top: 15px;
+}
+
+.slideshow img {
+	display:block;
+}
