--- a/stylesheet.css
+++ b/stylesheet.css
@@ -117,6 +117,12 @@ body {
 	color: black;
 }
 
+.cattab {
+	border-bottom: 2px solid black !important;
+	font-size: 20px;
+	font-weight: bold;
+}
+
 .products {
 	text-align: center;
 	float: left;
