--- a/stylesheet.css
+++ b/stylesheet.css
@@ -193,3 +193,100 @@ body {
 .slideshow img {
 	display:block;
 }
+
+.product-part {
+	overflow: hidden;
+	width: 80%;
+}
+
+.productinfo {
+	float: left;
+	width: 100%;
+	border-bottom: 1px solid black;
+	padding: 0 0 7px 0;
+}
+
+.imgproduct {
+	float: left;
+	margin: 10px 0 0 10px;
+}
+
+.imgproduct img {
+	height: 210px;
+}
+
+.besproduct {
+	float: left;
+	width: 472px;
+	text-align: center;
+	margin: 20px 0 0 0;
+}
+
+.besproduct p {
+	text-align: left;
+}
+
+.besproduct h3, .besproduct h4, .besproduct p {
+	margin-top: 10px;
+}
+
+.meter {
+	width: 200px;
+	height: 10px;
+	background-color: #555555;
+	margin: 3px auto 0 auto;
+	border-radius: 25px;
+	padding: 3px;
+	box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
+}
+
+.meter span {
+	display: block;
+ 	height: 100%;
+	border-top-right-radius: 8px;
+	border-bottom-right-radius: 8px;
+	border-top-left-radius: 20px;
+	border-bottom-left-radius: 20px;
+	background-color: rgb(43,194,83);
+	background-image: linear-gradient(center bottom, rgb(43,194,83) 37%, rgb(84,240,84) 69%);
+	box-shadow: inset 0 2px 9px  rgba(255,255,255,0.3), inset 0 -2px 6px rgba(0,0,0,0.4);
+	position: relative;
+	overflow: hidden;
+}
+
+.meter span:after {
+  content: "";
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+  background-image: linear-gradient(-45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent);
+  z-index: 1;
+  background-size: 50px 50px;
+  animation: move 2s linear infinite;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  overflow: hidden;
+}
+
+.productspecs {
+	float: left;
+	width: 45%;
+	margin: 12px 0 0 20px;
+}
+
+.specrow {
+	width: 100%;
+	display: block;
+	overflow: hidden;
+	margin: 8px 0 0 0;
+}
+
+.specrow p {
+	float: left;
+	font-size: 18px;
+}
+
+.specrow img {
+	float: right;
+}
