--- a/stylereparatie.css
+++ b/stylereparatie.css
@@ -2,21 +2,48 @@
 	font-family: 'Karla', sans-serif;
 	background-color: #FFFFFF;
 	width: 100%;
-	overflow: hidden;
 }
 
 .main-section li {
 	list-style-type: none;
 }
 
-.img {
-	float:right;
+.repflex {
+	display: flex;
+	width: 100%;
+}
+
+.price-table {
+	width: 578px;
+}
+
+.image {
+	width: 388px;
 }
 
 .row1 {
+	padding:2.5px 0px 2.5px 0px;
 	text-align:left;
 }
 
 .row2 {
-	padding-left:60px;
+	padding:2.5px 0px 2.5px 60px;
+}
+
+.row3 {
+	padding:2.5px 0px 2.5px 120px;
+}
+
+.row4 {
+	padding:2.5px 0px 2.5px 150px;
+}
+
+.row5 {
+	padding:2.5px 0px 2.5px 20px;
+	text-align:left;
+}
+
+.software-info {
+	margin: 30px 0px 0px 10px;
+	width: 578px;
 }
