--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,6 +70,10 @@ body {
 	color: #FFFFFF;
 }
 
+.nav .active {
+	background-color: #0147FA;
+}
+
 /*MAIN-SECTION*/
 .main-section {
 	font-family: 'Karla', sans-serif;
@@ -115,6 +119,14 @@ body {
 .categories a {
 	text-decoration: none;
 	color: black;
+}
+
+.categories .active {
+	background-color: #0147FA;
+}
+
+.categories .active a {
+	color: white;
 }
 
 .cattab {
@@ -367,6 +379,49 @@ body {
 	float:right;
 }
 
+.main-section li {
+	list-style-type: none;
+}
+
+.repflex {
+	display: flex;
+	width: 100%;
+}
+
+.price-table {
+	width: 578px;
+}
+
+.image {
+	width: 388px;
+}
+
+.row1 {
+	padding:2.5px 0px 2.5px 10px;
+	text-align:left;
+}
+
+.row2 {
+	padding:2.5px 0px 2.5px 60px;
+}
+
+.row3 {
+	padding:2.5px 0px 2.5px 120px;
+}
+
+.row4 {
+	padding:2.5px 0px 2.5px 150px;
+}
+
+.row5 {
+	padding:2.5px 0px 2.5px 20px;
+	text-align:left;
+}
+
+.software-info {
+	margin: 30px 0px 10px 10px;
+	width: 578px;
+}
 .form-group {
 	display:flex;
 	/*flex-direction:column;*/
