--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,7 @@
 }
 
 body {
-	background-color: #1aff1a;
+	background-color: #0CD22B;
 }
 
 .container {
@@ -21,7 +21,6 @@ body {
 .company {
 	overflow: hidden;
 	height: 76px;
-	background-color: #1aff1a;
 }
 
 .logo {
