--- a/stylesheet.css
+++ b/stylesheet.css
@@ -447,3 +447,53 @@ body {
 	width:50px;
 	margin-left:347px;
 }
+
+.form-container {
+	display: flex;
+	justify-content: center;
+	height: 300px;
+	align-items: center;
+}
+
+.form-container form {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	border: 1px solid black;
+	width: 350px;
+	height: 200px;
+	background-image: url(images/log_background_login.jpg);
+}
+
+.form-login {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 10px;
+	color: white;
+	text-shadow: 1px 1px 2px black;
+}
+
+.line {
+	flex-direction: row;
+	align-items: center;
+}
+
+.form-login input[type="text"], .form-login input[type="password"] {
+	border: 1px solid #bfbfbf;
+}
+
+.form-login input[type="checkbox"] {
+	margin: 0 10px;
+}
+
+.form-login input[type="submit"] {
+	padding: 3px 20px;
+	border: 1px solid #bfbfbf;
+	background-color: white;
+	border-radius: 4px;
+}
+
+.form-login a {
+	text-shadow: none;
+}
