--- a/style-register.css
+++ b/style-register.css
@@ -20,3 +20,11 @@
 	width:50px;
 	margin-left:347px;
 }
+
+form {
+	width:400px;
+	height:400px;
+	margin:50px auto;
+	width:400px;
+	border: 1px solid black;
+}
